--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     },
     "require": {
-            "gabordemooij/redbean": "dev-master"
+            "gabordemooij/redbean": "dev-master",
+        "vlucas/valitron": "^1.4"
     }
 }
